--- a/src/eni/seis/theme/theme-south/src/less/layout/header.less
+++ b/src/eni/seis/theme/theme-south/src/less/layout/header.less
@@ -49,6 +49,7 @@ ul.configlets {
 }
 
 .container-fluid.header-top {
+  overflow: overlay;
   background: @color-gray-lighter !important;
   padding: 0.5rem;
   margin-bottom: 4rem;
